Travel::RoutinG::DE::VRR 2.02 - Wed Apr 10 2013

    * Patch by Roland Hieber: respect proxy environment variables

Travel::Routing::DE::VRR 2.01 - Thu Jan 26 2012

    * Fix bug in departure_stop_and_platform where the arrival_stop was used
      in case of unknown platforms
    * Document -E / --extended-info in efa(1)

Travel::Routing::DE::VRR 2.00 - Sun Dec 11 2011

    * Now uses the efa.vrr.de XML interface
    * properly decode UTF-8 strings

    [Travel::Routing::DE::VRR::Route]
    * new accessors: duration, ticket_type, fare_adult, fare_child and
      vehicle_time

    [Travel::Routing::DE::VRR::Route::Part]
    * arrival_stop and departure_stop no longer include the platform,
      use arrival_stop_and_platform / departure_stop_and_platform instead
    * New accessors: arrival_date, arrival_platform, arrival_sdate,
      arrival_stime, arrival_stop_and_platform, delay, departure_date,
      departure_platform, departure_sdate, departure_stime,
      departure_stop_and_platform, via
    * ->extra no longer contains information about delays, use ->delay instead

    [efa]
    * New -E / --extended-info option to display travel fares

Travel::Routing::DE::VRR 1.06 - Sat Sep 17 2011

    * Fix dependencies.  We claimed to use WWW::Mechanize but in fact only
      need LWP::UserAgent

Travel::Routing::DE::VRR 1.05 - Sun Jul 17 2011

    * Documentation fixes (in a few places, the module was prefixed
      Travel::Status instead of the correct Travel::Routing)
    * Note that we need perl >= 5.10.1 because of the parent pragma

    [efa]
    * Fix connection error handler

Travel::Routing::DE::VRR 1.04 - Wed Jun 29 2011

    * efa: Remove --foo-type options, use --to city type:stop etc. instead
    * Introducing Travel::Routing::DE::VRR
    * New dependencies: Class::Accessor, Exception::Class

efa 1.3 - Sun Jun 6 2010

    * Rewrite efa parser using XML::LibXML (major performance improvement)